--- a/.charts/tink-backend-aggregation-agents/templates/pt/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/pt/alerts.yaml
@@ -133,6 +133,8 @@ spec:
         count(sum_over_time(tink_agent_login_total{action="login",outcome="unavailable", market="PT"}[12h])) BY (className,provider)
         # All login attempts the last 6 hours
           / count(sum_over_time(tink_agent_login_total{action="login", market="PT"}[6h])) BY (className,provider) > 0.90
+        # At least this many attempts.
+         and count(sum_over_time(tink_agent_login_total{action=~"login|is-logged-in", market="PT", provider_type!="test"}[12h])) by (className,provider) > 2
       for: 15m
       interval: 1h
       labels:
@@ -209,6 +211,8 @@ spec:
         count(sum_over_time(tink_agent_login_total{action="login",outcome="cancelled_due_to_third_party_app_timeout", market="PT"}[6h])) BY (className,provider)
         # All login attempts the last 6 hours
           / count(sum_over_time(tink_agent_login_total{action="login", market="PT"}[6h])) BY (className,provider) > 0.90
+        # At least this many attempts.
+        and count(sum_over_time(tink_agent_login_total{action=~"login|is-logged-in", market="PT", provider_type!="test"}[6h])) by (className,provider) > 2
       for: 15m
       interval: 1h
       labels:
