--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/controllers/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/controllers/BUILD
@@ -6,6 +6,7 @@ java_library(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/locks",
         "//src/libraries/cache",
         "//third_party:com_google_inject_guice",
+        "//third_party:lombok_libs",
         "//third_party:org_apache_curator_curator_framework",
         "//third_party:org_apache_curator_curator_recipes",
         "//third_party:org_slf4j_slf4j_api",
