--- a/src/integration/agents/BUILD
+++ b/src/integration/agents/BUILD
@@ -50,6 +50,7 @@ java_library(
         "//src/integration/transfer:rpc",
         "//src/integration/user:rpc",
         "//src/libraries/agent-storage",
+        "//src/libraries/credentials-persistence",
         "//src/libraries/date",
         "//src/libraries/giro_validation",
         "//src/libraries/i18n",
