--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/berlingroup/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/berlingroup/BUILD
@@ -6,6 +6,7 @@ java_library(
         "//src/integration/amount",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/annotations",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/response",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/utils",
         "//third_party:lombok_libs",
         "//third_party:org_apache_commons_commons_collections4",
