--- a/src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/utils/berlingroup/BUILD
+++ b/src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/utils/berlingroup/BUILD
@@ -2,13 +2,14 @@ load("//tools/bzl:junit.bzl", "junit_test")
 
 junit_test(
     name = "berlingroup",
-    srcs = glob(["*.java"]),
+    srcs = glob(["**/*.java"]),
     data = [],
     visibility = ["//visibility:public"],
     deps = [
         "//src/integration/amount",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/berlingroup",
         "//third_party:org_assertj_assertj_core",
+        "//third_party:org_mockito_mockito_core",
         "//third_party:pl_pragmatists_junitparams",
     ],
 )
