--- a/.charts/tink-backend-aggregation-agents/templates/pt/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/pt/alerts.yaml
@@ -25,7 +25,25 @@ spec:
       annotations:
         description: {{ .Values.kibanaLink }}
           {{ .Values.grafanaLink }}
-        summary: Authentication failures 50% (<{ $value }>) for <{ $labels.className }> ( <{ $labels.provider }>
+        summary: Authentication failures is over 50% (<{ $value }>) for <{ $labels.className }> ( <{ $labels.provider }> for last 30m
+          the last hour.
+        tags: {{ .Values.tags }}
+
+    - alert: LongTermAuthenticationErrorRateOver90%PT
+      expr: |
+        # Failed logins over 90%
+        (count(sum_over_time(tink_agent_login_total{action="login", outcome="completed", market="PT", provider_type!="test"}[12h])) by (action,className,provider)
+            / count(sum_over_time(tink_agent_login_total{action="login", market="PT", provider_type!="test"}[12h])) by (action,className,provider) < 0.1)
+      for: 5m
+      interval: 1h
+      labels:
+        severity: urgent
+        priority: P1
+        who: integration-minions
+      annotations:
+        description: {{ .Values.kibanaLink }}
+          {{ .Values.grafanaLink }}
+        summary: Authentication failures is over 90% (<{ $value }>) for <{ $labels.className }> ( <{ $labels.provider }> for last 12h
           the last hour.
         tags: {{ .Values.tags }}
 
@@ -102,7 +120,7 @@ spec:
       for: 5m
       labels:
         severity: urgent
-        priority: P1
+        priority: P2
         who: integration-minions
       annotations:
         description: {{ .Values.kibanaLink }}
@@ -121,7 +139,7 @@ spec:
       for: 5m
       labels:
         severity: urgent
-        priority: P1
+        priority: P2
         who: integration-minions
       annotations:
         description: {{ .Values.kibanaLink }}
@@ -142,7 +160,7 @@ spec:
       interval: 1h
       labels:
         severity: urgent
-        priority: P1
+        priority: P2
         who: integration-minions
       annotations:
         description: {{ .Values.kibanaLink }}
@@ -200,7 +218,7 @@ spec:
       for: 5m
       labels:
         severity: urgent
-        priority: P1
+        priority: P2
         who: integration-minions
       annotations:
         description: {{ .Values.kibanaLink }}
@@ -220,7 +238,7 @@ spec:
       interval: 1h
       labels:
         severity: urgent
-        priority: P1
+        priority: P2
         who: integration-minions
       annotations:
         description: {{ .Values.kibanaLink }}
