--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/utils/transfer/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/utils/transfer/BUILD
@@ -8,7 +8,9 @@ java_library(
         "//src/integration/transfer:enums",
         "//src/integration/transfer:rpc",
         "//src/libraries/i18n",
+        "//third_party:com_google_code_findbugs_jsr305",
         "//third_party:com_google_guava_guava",
+        "//third_party:lombok_libs",
         "//third_party:org_apache_commons_commons_lang3",
     ],
 )
