--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/fr/banks/labanquepostale/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/fr/banks/labanquepostale/BUILD
@@ -37,13 +37,15 @@ junit_test(
     data = [
     ],
     visibility = ["//visibility:public"],
-    deps = [
+    runtime_deps = [
         "//src/integration/agents",
+        "//src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework",
+        "//src/integration/lib/src/test/java/se/tink/backend/aggregation/configuration",
+    ],
+    deps = [
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/fr/banks/labanquepostale",
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
         "//src/integration/lib",
-        "//src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework",
-        "//src/integration/lib/src/test/java/se/tink/backend/aggregation/configuration",
         "//src/integration/models",
         "//src/libraries/serialization",
         "//third_party:org_assertj_assertj_core",
