--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/agentfactory/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/agentfactory/BUILD
@@ -287,6 +287,7 @@ java_library(
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/nl/openbanking/triodos",
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/no/banks/danskebank",
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/no/banks/dnb",
+        "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/no/banks/dnbbankid",
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/no/banks/handelsbanken",
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/no/banks/nordea",
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/no/banks/nordeapartner",
