--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/fr/openbanking/lcl/integration/resources/configuration.yml
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/fr/openbanking/lcl/integration/resources/configuration.yml
@@ -3,6 +3,7 @@ agentsServiceConfiguration:
     4100331c75e246b8b667ea90856f9af4:
       tink:
         qsealcKeyId: https://cdn.tink.se/eidas/tink-qsealc.pem
+        clientId: PSDSE-FINA-44059
         redirectUrl: https://api.tink.com/api/v1/credentials/third-party/callback
   eidasProxy:
     host: https://eidas-proxy.staging.aggregation.tink.network
