--- a/src/libraries/repository/BUILD
+++ b/src/libraries/repository/BUILD
@@ -16,11 +16,11 @@ java_library(
         "//third_party:org_springframework_data_spring_data_jpa",
         "//third_party:org_springframework_spring_core",
         "//third_party:org_springframework_spring_expression",
-        "@aggregation//:c3p0_c3p0",
         "@aggregation//:com_fasterxml_jackson_core_jackson_annotations",
         "@aggregation//:com_fasterxml_jackson_core_jackson_core",
         "@aggregation//:com_fasterxml_jackson_core_jackson_databind",
         "@aggregation//:com_google_guava_guava",
+        "@aggregation//:com_mchange_c3p0",
         "@aggregation//:javax_inject_javax_inject",
     ],
 )
