--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/be/banks/axa/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/be/banks/axa/BUILD
@@ -18,6 +18,7 @@ junit_test(
         "//third_party:org_assertj_assertj_core",
         "//third_party:org_bouncycastle_bcprov_jdk15on",
         "//third_party:org_mockito_mockito_core",
+        "@aggregation//:com_fasterxml_jackson_core_jackson_core",
         "@aggregation//:com_fasterxml_jackson_core_jackson_databind",
     ],
 )
