--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/se/openbanking/nordea/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/se/openbanking/nordea/BUILD
@@ -17,7 +17,9 @@ junit_test(
         "//src/integration/amount",
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework",
+        "//src/integration/payment:enums",
         "//src/integration/payment:rpc",
+        "//src/integration/transfer:rpc",
         "//third_party:org_iban4j_iban4j",
         "//third_party:org_mockito_mockito_core",
         "@tink_backend//src/libraries/account_identifier",
