--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/controllers/refresh/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/controllers/refresh/BUILD
@@ -22,5 +22,6 @@ java_library(
         "//third_party:com_google_guava_guava",
         "//third_party:lombok_libs",
         "//third_party:org_slf4j_slf4j_api",
+        "@tink_backend//src/libraries/account_identifier",
     ],
 )
