--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/controllers/payment/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/controllers/payment/BUILD
@@ -16,6 +16,7 @@ java_library(
         "//src/libraries/agent-storage",
         "//src/libraries/date",
         "//src/libraries/pair",
+        "//third_party:com_google_guava_guava",
         "//third_party:lombok_libs",
         "@tink_backend//src/libraries/account_identifier",
         "@tink_backend//src/libraries/payments_validations",
