--- a/src/tink_backend_libs/BUILD
+++ b/src/tink_backend_libs/BUILD
@@ -5,6 +5,7 @@ java_library(
     srcs = ["@tink_backend//src/libraries/aggregation_agent_api_client:aggregation_agent_api_client_srcjar"],
     visibility = ["//visibility:public"],
     deps = [
+        "//third_party:com_fasterxml_jackson_core_jackson_annotations",
         "//third_party:com_fasterxml_jackson_core_jackson_core",
         "//third_party:com_fasterxml_jackson_core_jackson_databind",
         "//third_party:com_fasterxml_jackson_datatype_jackson_datatype_jsr310",
@@ -12,7 +13,6 @@ java_library(
         "//third_party:javax_validation_validation_api",
         "//third_party:lombok_plugin",
         "//third_party:org_hibernate_hibernate_validator",
-        "@aggregation//:com_fasterxml_jackson_core_jackson_annotations",
         "@aggregation//:org_projectlombok_lombok",
         "@maven//:com_squareup_okhttp3_okhttp",
         "@maven//:com_squareup_okhttp3_okhttp_tls",
